tests/invalid/dict_get_wrong_key_type/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    v: int = d.get("bad")


if __name__ == "__main__":
    run_case()
